# maze-grpo-fine-tune

./: .env  .gitignore  .python-versions  CLAUDE.md  README.md  analyze_ground_truth_distribution.py  config.py  dataset.py  eval_model.py  evaluate.py  just to test.py  loading_prompts.ipynb  mlx_training.ipynb  pyproject.toml  pytorch_training.py  sweep_config.yaml  sweep_config_lora.yaml  sweep_train.py  teest.ipynb  test.ipynb  testing_inference.ipynb  train.py  training_model.py  training_model_v2.py  training_model_v3.py
reward_functions/: rewards.py  utils.py
src/: evaluate.py  rewards.py  train.py
src/llm_fine_tune/: dataset.py  evaluate.py  prepare_dataset.py  rewards.py  train.py
src/llm_fine_tune/utils/: config.py  utils.py
src/utils/: utils.py
wandb_configs/: sweep_full_fine_tune.yaml  sweep_lora.yaml
